--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Bluise",
   "shortName": "Bluise",
-  "description": "A Nuxt.js & Netlify CMS boilerplate.",
-  "themeColor": "#0b3765",
+  "description": "Made by qatar krzak",
+  "themeColor": "#45afff",
   "backgroundColor": "#ffffff",
   "lang": "en"
 }
