--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -23,7 +23,7 @@ collections:
           - { label: Title, name: title, widget: string }
           - { label: 'Title Template', name: titleTemplate, widget: string }
           - { label: 'Welcome Text', name: welcomeText, widget: markdown }
-          - { label: Logo, name: logo, widget: image }
+          - { label: Logo, name: logo, widget: string }
           - { label: Icon, name: icon, widget: image }
           - { label: 'Loading Color', name: loadingColor, widget: string, default: '#000000' }
           - { label: 'SEO Description', name: seoDescription, widget: text, required: false }
