--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -68,3 +68,13 @@ collections:
       - { label: 'Featured Image', name: featuredImage, widget: image, required: false }
       - { label: 'SEO Description', name: seoDescription, widget: text, required: false }
       - { label: 'SEO Meta Image', name: seoMetaImage, widget: image, required: false }
+  - name: 'staffmember'
+    label: 'Staff Member'
+    folder: 'app/content/staff'
+    create: true
+    slug: '{{slug}}'
+    format: 'json'
+    fields:
+      - { label: Name, name: name, widget: string }
+      - { label: Content, name: content, widget: markdown }
+      - { label: 'Profile', name: profile, widget: image, required: false }
