--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -77,7 +77,7 @@ collections:
     fields:
       - { label: Name, name: name, widget: string }
       - { label: Content, name: content, widget: markdown }
-      - { label: 'Profile', name: profile, widget: image, required: false }
+      - { label: 'Images', name: img, widget: image, allow_multiple: true }
   - name: 'staffmember'
     label: 'Staff Members'
     folder: 'app/content/staff'
