--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -23,6 +23,7 @@ collections:
           - { label: Title, name: title, widget: string }
           - { label: 'Title Template', name: titleTemplate, widget: string }
           - { label: 'Tagline', name: taglineText, widget: string }
+          - { label: 'Subtag', name: subtagText, widget: string }
           - { label: 'Welcome Text', name: welcomeText, widget: markdown }
           - { label: Header, name: header, widget: image }
           - { label: Logo, name: logo, widget: string }
