--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -94,3 +94,14 @@ collections:
       - { label: Name, name: name, widget: string }
       - { label: Content, name: content, widget: markdown }
       - { label: 'Profile', name: profile, widget: image, required: false }
+  
+  - name: 'committees'
+    label: 'Committees'
+    folder: 'app/content/committees'
+    create: true
+    slug: '{{fields.name}}'
+    format: 'json'
+    fields:
+      - { label: Name, name: name, widget: string }
+      - { label: Content, name: content, widget: markdown }
+      - { label: 'Profile', name: profile, widget: image, required: false }
