--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -31,7 +31,7 @@ collections:
           - { label: 'Loading Color', name: loadingColor, widget: string, default: '#000000' }
           - { label: 'SEO Description', name: seoDescription, widget: text, required: false }
           - { label: 'SEO Meta Image', name: seoMetaImage, widget: image, required: false }
-      - label: Manifest
+      - label: Metadata/About
         name: manifest
         format: json
         file: 'app/content/settings/manifest.json'
