Update Settings “manifest”

--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -4,5 +4,6 @@
   "description": "We do X, Y, Z",
   "themeColor": "#0b3765",
   "backgroundColor": "#ffffff",
-  "lang": "en"
+  "lang": "en",
+  "ev1": "Meditation pop-up forage"
 }
