--- a/app/static/admin/config.yml
+++ b/app/static/admin/config.yml
@@ -43,6 +43,9 @@ collections:
           - { label: 'Background color', name: backgroundColor, widget: string }
           - { label: Lang, name: lang, widget: string, default: en }
           - { label: "Event 1", name: ev1, widget: "relation", collection: "blog", search_fields: ['title'], value_field: "{{title}}", display_fields: ['title'] }
+          - { label: "Event 2", name: ev2, widget: "relation", collection: "blog", search_fields: ['title'], value_field: "{{title}}", display_fields: ['title'] }
+          - { label: "Event 3", name: ev3, widget: "relation", collection: "blog", search_fields: ['title'], value_field: "{{title}}", display_fields: ['title'] }
+          - { label: "Event 4", name: ev4, widget: "relation", collection: "blog", search_fields: ['title'], value_field: "{{title}}", display_fields: ['title'] }
 
   - name: 'pages'
     label: 'Pages'
