Update Settings “manifest”

--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,9 +1,12 @@
 {
-  "name": "Bluise",
+  "ev1": "cat",
+  "ev2": "Meditation pop-up forage",
+  "ev3": "La croix",
+  "ev4": "test1",
   "shortName": "Bluise",
-  "description": "We do X, Y, Z",
-  "themeColor": "#0b3765",
-  "backgroundColor": "#ffffff",
+  "name": "Bluise",
   "lang": "en",
-  "ev1": "Meditation pop-up forage"
+  "backgroundColor": "#ffffff",
+  "themeColor": "#0b3765",
+  "description": "We do X, Y, Z"
 }
