Update Settings “manifest”

--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -8,5 +8,5 @@
   "lang": "en",
   "backgroundColor": "#ffffff",
   "themeColor": "#0b3765",
-  "description": "“Our mission is to develop freshmen into leaders who exemplify the Aggie Spirit and preserve the fundamental traditions and values of Texas A&M University through selfless service, community outreach, and University engagement. We envision a campus where all Aggies demonstrate the uncommon ability to inspire and lead the Aggie family to exceptional achievement.”\n\nThis is the second part of it. Just post this for now but looking for first part rn"
+  "description": "“Our mission is to develop freshmen into leaders who exemplify the Aggie Spirit and preserve the fundamental traditions and values of Texas A&M University through selfless service, community outreach, and University engagement. We envision a campus where all Aggies demonstrate the uncommon ability to inspire and lead the Aggie family to exceptional achievement.”"
 }
