Update Settings “manifest”

--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,8 +1,8 @@
 {
-  "ev1": "cat",
-  "ev2": "Meditation pop-up forage",
-  "ev3": "La croix",
-  "ev4": "test1",
+  "ev1": "D1 Retreat",
+  "ev2": "Service Retreat",
+  "ev3": "Spring Semi-formal",
+  "ev4": "End of Year Banquet",
   "shortName": "Bluise",
   "name": "Bluise",
   "lang": "en",
